--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                
                 <h1 >CALCULATOR</h1>
                 <!-- <input type="text"> -->
-                <input type="text" name="screen" id="answer" class="answer" placeholder="Enter input"  readonly>
+                <input type="text" name="screen" id="answer" class="answer" placeholder="0"  readonly>
                 <div class="input" id="input">
 
                 
